crates/strider-analyze/tests/snapshots/aarch64be__floats__f64_compare.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "14" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v11" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v16" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v16" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v17" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v17" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "14" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "19" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v17" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v16" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "19" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "24" -> "20" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "25" [label="φ q1", shape=house, fillcolor="#163030"];
  "19" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu128 → u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "32" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "30" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="φ q0", shape=house, fillcolor="#163030"];
  "19" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "34" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "38" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Truncate\nu128 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "40" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "38" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="φ Val", shape=house, fillcolor="#163030"];
  "19" -> "42" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="φ Mem", shape=house, fillcolor="#163030"];
  "19" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "49" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "52" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "49" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="φ OV", shape=house, fillcolor="#163030"];
  "14" -> "64" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="φ NG", shape=house, fillcolor="#163030"];
  "14" -> "63" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "67" -> "63" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" -> "63" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "68" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "30" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "38" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="φ ZR", shape=house, fillcolor="#163030"];
  "14" -> "72" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "74" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "70" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "30" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "76" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "81" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "38" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "82" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="φ NG", shape=house, fillcolor="#163030"];
  "5" -> "82" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "83" -> "82" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "84" -> "82" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "84" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "84" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "85" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "86" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "30" -> "87" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "38" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "90" -> "89" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "90" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "91" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "30" -> "91" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "92" -> "88" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "92" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "93" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "38" -> "93" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
}
